<resources>
    <string name="app_name">ToBuy</string>
    <string name="no_data">No data</string>
    <string name="list_title">TobuyList List</string>
    <string name="navigation_view_header_title">TobuyList</string>
    <string name="refresh">Refresh</string>
    <string name="empty_tobuylist_message">TobuyLists cannot be empty</string>
    <string name="empty_item_message">Item cannot be empty</string>
    <string name="tobuy_list_not_saved_message">Save List before adding new item</string>
    <string name="add_tobuylist">New Tobuy List</string>
    <string name="add_new_item">New Item</string>
    <string name="add_item">Add Item</string>
    <string name="edit_tobuylist">Edit Tobuy List</string>
    <string name="edit_item">Edit Item</string>
    <string name="price">Price:</string>
    <string name="total_cost_text">150</string>
    <string name="budget_text">200</string>
    <string name="tobuy_list_name">Weekend Shopping</string>
    <string name="tobuy_list_price_text">2000</string>
    <string name="store">Lidl</string>
    <string name="store_label">Store</string>
    <string name="placed_in">Basket</string>
    <string name="set_reminder_label">Set Reminder</string>
    <string name="total_cost_label">Total cost:</string>
    <string name="budget_label">Budget:</string>
    <string name="due_date_label">Due Date:</string>
    <string name="header_image">header_image</string>
    <string name="menu_delete_tobuy_list">Delete list</string>
    <string name="menu_show_in_widget">Show in Widget</string>
    <string name="menu_save_tobuy_list">Save list</string>
    <string name="menu_delete_tobuy_item">Delete item</string>

    <string name="pref_key_tobuy_list_id" translatable="false">TobuyList Id</string>

    <string name="pref_tobuy_list_id_default" translatable="false">1</string>
    <string name="ad_id">ca-app-pub-1913602329854727~3669745255</string>
    <string name="banner_ad_unit_id">ca-app-pub-1913602329854727/5855982941</string>
    <string name="banner_test_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="no_tobuys_all">You have no TO-BUYS!</string>
    <string name="no_items_all">No Items in your List!</string>
    <string name="edit_list">Edit List</string>
    <string name="price_text">200</string>
    <string name="placed_in_label">Placed in:</string>
    <string name="item_name">Brush</string>
    <string name="item_price_label">Price:</string>
    <string name="item_price">20</string>
    <string name="edit">Edit</string>
    <string name="hint_name">Name</string>
    <string name="hint_budget">Budget</string>
    <string name="due_date">30–11–2099</string>
    <string name="save">Save</string>
</resources>
