<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.zizohanto.android.tobuy.util.Converter" />

        <variable
            name="viewmodel"
            type="com.zizohanto.android.tobuy.ui.addedititem.AddEditItemViewModel" />
    </data>

    <com.zizohanto.android.tobuy.ScrollChildSwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:enabled="@{viewmodel.dataLoading}"
        app:refreshing="@{viewmodel.dataLoading}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@={viewmodel.name}"
                    tools:text="@string/hint_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_price"
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                app:layout_constraintLeft_toRightOf="@id/til_name"
                app:layout_constraintTop_toBottomOf="@id/til_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={Converter.doubleToString(viewmodel.price)}"
                    tools:text="@string/price" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_store"
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/store_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewmodel.store}"
                    tools:text="@string/store_label" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_placed_in"
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placed_in_label"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_store">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={Converter.integerToString(viewmodel.placedIn)}"
                    tools:text="@string/placed_in" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.zizohanto.android.tobuy.ScrollChildSwipeRefreshLayout>

</layout>
